* sibcall.c (uses_addressof): Add INMEM argument, check for 	current_function_internal_arg_pointer outside of MEM rtxs in addition 	to ADDRESSOFs. 	(sequence_uses_addressof): Update caller.
	* gcc.c-torture/execute/20000706-1.c: New test.
	* gcc.c-torture/execute/20000706-2.c: New test.
	* gcc.c-torture/execute/20000706-3.c: New test.
	* gcc.c-torture/execute/20000706-4.c: New test.
	* gcc.c-torture/execute/20000706-5.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34906 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2000-07-07  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20000706-1.c: New test.
+	* gcc.c-torture/execute/20000706-2.c: New test.
+	* gcc.c-torture/execute/20000706-3.c: New test.
+	* gcc.c-torture/execute/20000706-4.c: New test.
+	* gcc.c-torture/execute/20000706-5.c: New test.
+
 2000-07-06  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.pt/instantiate7.C: New test.
