--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-07-07  Jakub Jelinek  <jakub@redhat.com>
+
+	* sibcall.c (uses_addressof): Add INMEM argument, check for
+	current_function_internal_arg_pointer outside of MEM rtxs in addition
+	to ADDRESSOFs.
+	(sequence_uses_addressof): Update caller.
+
 2000-07-07  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* tradcpp.c (initialize_builtins): Honor NO_BUILTIN_SIZE_TYPE
