* integrate.c (copy_insn_list): Remove REG_LABEL notes.
	* gcc.dg/20000707-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34907 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-07-07  Jakub Jelinek  <jakub@redhat.com>
 
+	* integrate.c (copy_insn_list): Remove REG_LABEL notes.
+
+2000-07-07  Jakub Jelinek  <jakub@redhat.com>
+
 	* sibcall.c (uses_addressof): Add INMEM argument, check for
 	current_function_internal_arg_pointer outside of MEM rtxs in addition
 	to ADDRESSOFs.
