--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-06  Tom Tromey  <tromey@cygnus.com>
+
+	* java/lang/natClassLoader.cc (_Jv_PrepareCompiledClass):
+	Initialize static final String fields.
+
 2000-07-03  Tom Tromey  <tromey@cygnus.com>
 
 	* java/io/PrintWriter.java (print): Call write(String), not
