--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8200,11 +8200,12 @@
       emit_insn (gen_call (operands[0], operands[1]));
       DONE;
     }
-
-  /* ??? Not true for calls to static functions.  */
-  if (flag_pic)
+  /* Static functions and indirect calls don't need
+     current_function_uses_pic_offset_table.  */
+  if (flag_pic
+      && constant_call_address_operand (operands[1], SImode)
+      && !SYMBOL_REF_FLAG (XEXP (operands[1], 0)))
     current_function_uses_pic_offset_table = 1;
-
   if (! call_insn_operand (operands[0], QImode))
     XEXP (operands[0], 0) = copy_to_mode_reg (Pmode, XEXP (operands[0], 0));
 }")
@@ -8254,10 +8255,12 @@
   ""
   "
 {
-  /* ??? Not true for calls to static functions.  */
-  if (flag_pic)
+  /* Static functions and indirect calls don't need
+     current_function_uses_pic_offset_table.  */
+  if (flag_pic
+      && constant_call_address_operand (operands[1], SImode)
+      && !SYMBOL_REF_FLAG (XEXP (operands[1], 0)))
     current_function_uses_pic_offset_table = 1;
-
   if (! call_insn_operand (operands[0], QImode))
     XEXP (operands[0], 0) = copy_to_mode_reg (Pmode, XEXP (operands[0], 0));
 }")
@@ -8314,11 +8317,12 @@
       emit_insn (gen_call_value (operands[0], operands[1], operands[2]));
       DONE;
     }
-
-  /* ??? Not true for calls to static functions.  */
-  if (flag_pic)
+  /* Static functions and indirect calls don't need
+     current_function_uses_pic_offset_table.  */
+  if (flag_pic
+      && constant_call_address_operand (operands[1], SImode)
+      && !SYMBOL_REF_FLAG (XEXP (operands[1], 0)))
     current_function_uses_pic_offset_table = 1;
-
   if (! call_insn_operand (operands[1], QImode))
     XEXP (operands[1], 0) = copy_to_mode_reg (Pmode, XEXP (operands[1], 0));
 }")
@@ -8331,10 +8335,12 @@
   ""
   "
 {
-  /* ??? Not true for calls to static functions.  */
-  if (flag_pic)
+  /* Static functions and indirect calls don't need
+     current_function_uses_pic_offset_table.  */
+  if (flag_pic
+      && constant_call_address_operand (operands[1], SImode)
+      && !SYMBOL_REF_FLAG (XEXP (operands[1], 0)))
     current_function_uses_pic_offset_table = 1;
-
   if (! call_insn_operand (operands[1], QImode))
     XEXP (operands[1], 0) = copy_to_mode_reg (Pmode, XEXP (operands[1], 0));
 }")
