--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-08  Neil Booth  <NeilB@earthling.net>
+
+	* gcc.dg/cpp/macsyntx.c: New tests.
+
 2000-07-07  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20000707-1.c: New test.
