2000-07-07  Alexandre Petit-Bianco  <apbianco@cygnus.com>
        * jcf-write.c (generate_classfile): Properly install the
        ConstantValue attribute and the initial value constant pool index
        on string constants.
        * parse.y (java_complete_lhs): Keep DECL_INITIAL when emitting
        class files.

(http://gcc.gnu.org/ml/gcc-patches/2000-07/msg00233.html)


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34921 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,11 @@
+2000-07-07  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* jcf-write.c (generate_classfile): Properly install the
+	ConstantValue attribute and the initial value constant pool index
+	on string constants.
+	* parse.y (java_complete_lhs): Keep DECL_INITIAL when emitting
+	class files.
+
 2000-07-06  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* parse.h (BUILD_PTR_FROM_NAME): Surround with a do/while
