2000-07-03  Donn Terry  (donnte@microsoft.com)
	* cppinit.c (print_help): split overlong line into ISO C89
	maximum chunks.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34922 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-03  Donn Terry  (donnte@microsoft.com)
+
+	* cppinit.c (print_help): split overlong line into ISO C89
+	maximum chunks.
+
 2000-07-07  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cppexp.c: Update all code for new lexer interface.
