--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,9 @@
 2000-07-07  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
+	* parse.y (generate_classfile): Exclude null strings.
+
+2000-07-07  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
 	* jcf-write.c (generate_classfile): Properly install the
 	ConstantValue attribute and the initial value constant pool index
 	on string constants.
