--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-09  Neil Booth  <NeilB@earthling.net>
+
+	* gcc.dg/cpp/macsyntx.c: Add test for #define defined.
+
 2000-07-07  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/cpp/19951227-1.c, gcc.dg/cpp/assert2.c,
