2000-07-08  Angela Marie Thomas <angela@cygnus.com>
	* lib/c-torture.exp: Make compiler_conditional_xfail_data global.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34930 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-08  Angela Marie Thomas <angela@cygnus.com>
+
+	* lib/c-torture.exp: Make compiler_conditional_xfail_data global.
+
 2000-07-09  Neil Booth  <NeilB@earthling.net>
 
 	* gcc.dg/cpp/macsyntx.c: Add test for #define defined.
