--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-09  Neil Booth  <NeilB@earthling.net>
+
+	* testsuite/gcc.dg/cpp/directiv.c: New tests.
+	* testsuite/gcc.dg/cpp/undef1.c: Update.
+
 2000-07-08  Angela Marie Thomas <angela@cygnus.com>
 
 	* lib/c-torture.exp: Make compiler_conditional_xfail_data global.
