--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-09  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cppexp.c (_cpp_parse_expr): Don't use unary plus.
+
 2000-07-09  Neil Booth  <NeilB@earthling.net>
 
 	* cpphash.h: ISvspace, is_vspace, is_nvspace: New.
