2000-07-10  Benjamin Chelf  <chelf@codesourcery.com>
	* c-common.h (build_stmt): Declare.
	(build_continue_stmt): Likewise.
	(build_break_stmt): Likewise.
	(build_return_stmt): Likewise.

	* c-decl.c (do_case): Rewrite to do what previously done in
	c-parse.in.

	* c-semantics.c (build_stmt): Define.
	(build_return_stmt): Likewise.
	(build_break_stmt): Likewise.
	(build_continue_stmt): Likewise.
	(build_case_label): Likewise.

	* c-parse.in (BREAK): Change to build tree, then generate RTL.
	(CONTINUE): Likewise.
	(RETURN): Likewise.
	(CASE): Likewise.
	(DEFAULT): Likewise.

	* c-parse.y: Regenerate.
	* c-pasre.c: Likewise.

	* cp/semantics.c (finish_for_stmt): Remove call to emit_line_note.
	(finish_continue_stmt): Likewise.
	(begin_for_stmt): Remove call to note_level_for_for.
	(finish_goto_stmt): Change call from build_min_nt
	to build_stmt.
	(finish_expr_stmt): Likewise.
	(begin_if_stmt): Likewise.
	(begin_while_stmt): Likewise.
	(finish_while_stmt): Likewise.
	(finish_return_stmt): Likewise.
	(begin_for_stmt): Likewise.
	(finish_for_stmt): Likewise.
	(finish_break_stmt): Likewise.
	(begin_switch_stmt): Likewise.
	(finish_case_label): Likewise.
	(genrtl_try_block): Likewise.
	(begin_try_block): Likewise.
	(begin_handler): Likewise.
	(begin_compound_stmt): Likewise.
	(finish_asm_stmt): Likewise.
	(finish_label_stmt): Likewise.
	(add_decl_stmt): Likewise.
	(finish_subobject): Likewise.
	(finish_decl_cleanup): Likewise.
	(finish_named_return_value): Likewise.
	(setup_vtbl_ptr): Likewise.
	(add_scope_stmt): Likewise.
	* cp/decl.c (finish_constructor_body): Likewise.
	(finish_destructor_body): Likewise.
	* cp/optimize.c (copy_body_r): Likewise.
	(initialize_inlined_parameters): Likewise.
	(declare_return_variable): Likewise.
	(expand_call_inline): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34943 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,28 @@
+2000-07-10  Benjamin Chelf  <chelf@codesourcery.com>
+
+	* c-common.h (build_stmt): Declare.
+	(build_continue_stmt): Likewise.
+	(build_break_stmt): Likewise.
+	(build_return_stmt): Likewise.
+
+	* c-decl.c (do_case): Rewrite to do what previously done in
+	c-parse.in.
+
+	* c-semantics.c (build_stmt): Define.
+	(build_return_stmt): Likewise.
+	(build_break_stmt): Likewise.
+	(build_continue_stmt): Likewise.
+	(build_case_label): Likewise.
+
+	* c-parse.in (BREAK): Change to build tree, then generate RTL.
+	(CONTINUE): Likewise.
+	(RETURN): Likewise.
+	(CASE): Likewise.
+	(DEFAULT): Likewise.
+
+	* c-parse.y: Regenerate.
+	* c-pasre.c: Likewise.
+	
 2000-07-09  Jason Merrill  <jason@redhat.com>
 
 	* expr.c (expand_expr): Bail earlier if we get an error_mark_node.
