--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-10  Nick Clifton  <nickc@cygnus.com>
+
+	* libgcc2.c (next_stack_level): Cast result of computation to
+	(void **) so that the assignment doe snot generate a warning.
+
 2000-07-10  Chandrakala Chavva  <cchavva@redhat.com>
 
 	* flags.h : Add new variable flag_single_precision_constant.
