--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -255,10 +255,7 @@
 {
   /* ??? Should generalize this, so that we can also support 32 bit
      pointers.  */
-  if (! TARGET_NO_PIC
-      && (GET_CODE (operands[1]) == CONST
-	  || GET_CODE (operands[1]) == SYMBOL_REF
-	  || GET_CODE (operands[1]) == LABEL_REF))
+  if (! TARGET_NO_PIC && symbolic_operand (operands[1], DImode))
     {
       rtx temp;
 
@@ -281,15 +278,18 @@
 	       && GET_CODE (XEXP (XEXP (operands[1], 0), 1)) == CONST_INT
 	       && (INTVAL (XEXP (XEXP (operands[1], 0), 1)) & 0x1fff) != 0)
 	{
-	  HOST_WIDE_INT ofs = INTVAL (XEXP (XEXP (operands[1], 0), 1));
-	  rtx sym = XEXP (XEXP (operands[1], 0), 0);
 	  rtx subtarget = no_new_pseudos ? temp : gen_reg_rtx (DImode);
+	  rtx sym = XEXP (XEXP (operands[1], 0), 0);
+	  HOST_WIDE_INT ofs, hi, lo;
 
-	  sym = plus_constant (sym, ofs & ~(HOST_WIDE_INT)0x1fff);
-	  ofs &= 0x1fff;
-
-	  emit_insn (gen_load_symptr (subtarget, sym));
-	  emit_insn (gen_adddi3 (temp, subtarget, GEN_INT (ofs)));
+	  /* Split the offset into a sign extended 14-bit low part
+	     and a complementary high part.  */
+	  ofs = INTVAL (XEXP (XEXP (operands[1], 0), 1));
+	  lo = ((ofs & 0x3fff) ^ 0x2000) - 0x2000;
+	  hi = ofs - lo;
+	
+	  emit_insn (gen_load_symptr (subtarget, plus_constant (sym, hi)));
+	  emit_insn (gen_adddi3 (temp, subtarget, GEN_INT (lo)));
 	}
       else
 	emit_insn (gen_load_symptr (temp, operands[1]));
@@ -329,14 +329,13 @@
 (define_expand "load_fptr"
   [(set (match_dup 2)
 	(plus:DI (reg:DI 1) (match_operand:DI 1 "function_operand" "")))
-   (set (match_operand:DI 0 "register_operand" "") (mem:DI (match_dup 2)))]
+   (set (match_operand:DI 0 "register_operand" "") (match_dup 3))]
   ""
   "
 {
-  if (reload_in_progress)
-    operands[2] = operands[0];
-  else
-    operands[2] = gen_reg_rtx (DImode);
+  operands[2] = no_new_pseudos ? operands[0] : gen_reg_rtx (DImode);
+  operands[3] = gen_rtx_MEM (DImode, operands[2]);
+  RTX_UNCHANGING_P (operands[3]) = 1;
 }")
 
 (define_insn "*load_fptr_internal1"
@@ -366,28 +365,26 @@
    (set (match_operand:DI 0 "register_operand" "")
 	(plus:DI (reg:DI 1) (match_dup 2)))]
   ""
-  "{
-  if (reload_in_progress)
-    operands[2] = operands[0];
-  else
-    operands[2] = gen_reg_rtx (DImode);
+  "
+{
+  operands[2] = no_new_pseudos ? operands[0] : gen_reg_rtx (DImode);
 }")
 
 (define_expand "load_symptr"
   [(set (match_dup 2)
-	(plus:DI (reg:DI 1) (match_operand:DI 1 "symbolic_operand" "")))
+	(plus:DI (reg:DI 1) (match_operand:DI 1 "got_symbolic_operand" "")))
    (set (match_operand:DI 0 "register_operand" "") (match_dup 3))]
   ""
   "
 {
-  operands[2] = reload_in_progress ? operands[0] : gen_reg_rtx (DImode);
+  operands[2] = no_new_pseudos ? operands[0] : gen_reg_rtx (DImode);
   operands[3] = gen_rtx_MEM (DImode, operands[2]);
   RTX_UNCHANGING_P (operands[3]) = 1;
 }")
 
 (define_insn "*load_symptr_internal1"
   [(set (match_operand:DI 0 "register_operand" "=r")
-	(plus:DI (reg:DI 1) (match_operand:DI 1 "symbolic_operand" "s")))]
+	(plus:DI (reg:DI 1) (match_operand:DI 1 "got_symbolic_operand" "s")))]
   ""
   "addl %0 = @ltoff(%1), gp"
   [(set_attr "type" "A")])
