* cppinit.c: (cpp_reader_init): Allow digraphs by default. 	(handle_option): Set digraphs according to standard. 	Merge OPT_lang_c89 handler with OPT_std_c89.
	* cpplex.c: (lex_line, can_paste): Honour digraphs in
	accordance with	the digraphs flag.

	* cpplib.h: (struct cpp_options): New option digraphs.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34956 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2000-07-11  Neil Booth  <NeilB@earthling.net>
+
+	* cppinit.c: (cpp_reader_init): Allow digraphs by default.
+	(handle_option): Set digraphs according to standard.
+	Merge OPT_lang_c89 handler with OPT_std_c89.
+
+	* cpplex.c: (lex_line, can_paste): Honour digraphs in
+	accordance with	the digraphs flag.
+
+	* cpplib.h: (struct cpp_options): New option digraphs.
+
 2000-07-10  Hans-Peter Nilsson  <hp@axis.com>
 	    Bruce Korb  <bkorb@gnu.org>
 
